Bug 555321: In nsSVGSVGElement::InvalidateTransformNotifyFrame, don't warn about 'wrong frame type' if we don't have a frame. r=jwatt