content/svg/content/src/nsSVGSVGElement.cpp
@@ -1091,15 +1091,15 @@ nsSVGSVGElement::WillBeOutermostSVG(nsIContent* aParent,
 void
 nsSVGSVGElement::InvalidateTransformNotifyFrame()
 {
-  nsISVGSVGFrame* svgframe = do_QueryFrame(GetPrimaryFrame());
+  nsIFrame* frame = GetPrimaryFrame();
+  nsISVGSVGFrame* svgframe = do_QueryFrame(frame);
   if (svgframe) {
     svgframe->NotifyViewportChange();
   }
 #ifdef DEBUG
-  else {
-    // XXX we get here during nsSVGOuterSVGFrame::Init() since that
-    // function is called before the presshell association between us
-    // and our frame is established.
+  else if (frame) {
+    // Uh oh -- we have a primary frame, but it failed the do_QueryFrame to the
+    // expected type!
     NS_WARNING("wrong frame type");
   }
 #endif
